# Fenton-Karma-finitewave-model

./: README.md  pyproject.toml
examples/: fenton_karma_example.py
fenton_karma/: ops.py
implementation/: fenton_karma_0d.py
tests/: fenton_karma_test.py
